# LinuxTabletConfig

./: .gitignore  CMakeLists.txt  LinuxTabletConfig  LinuxTabletConfig.desktop  Makefile  README.md
Include/: DeviceManager.hpp  Mapper.hpp
Src/: DeviceManager.cpp  LinuxTabletConfig.cpp  Mapper.cpp
include/: Config.hpp  DeviceManager.hpp  Mapper.hpp  SettingsPanel.hpp  VectorWidget.hpp  Window.hpp
src/: Config.cpp  Config.hpp  DeviceManager.cpp  DeviceManager.hpp  LinuxTabletConfig.cpp  Mapper.cpp  Mapper.hpp  MapperSettings.cpp  MapperSettings.hpp  SettingsPanel.cpp  SettingsPanel.hpp  VectorWidget.hpp  Window.cpp  Window.hpp
